--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,9 @@ spring:
   application:
     name: spring-openai-demo
 
+  ai:
+    openai:
+      api-key : ${OPEN_API_KEY}
 server:
   port: 9292
 
