--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,10 @@ spring:
   ai:
     openai:
       api-key : ${OPEN_API_KEY}
+    ollama:
+      base-url:http://localhost:11434/
+    chat:
+      model:llama3.2:1b
 server:
   port: 9292
 
