--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,11 +4,18 @@ spring:
 
   ai:
     openai:
-      api-key : ${OPEN_API_KEY}
+      api-key: ${OPEN_API_KEY}
     ollama:
-      base-url:http://localhost:11434/
+      base-url: http://localhost:11434
+      chat:
+        model: llama3
     chat:
-      model:llama3.2:1b
+      client:
+        enabled: false
+logging:
+  level:
+    org.springframework.ai.ollama: DEBUG
+    org.springframework.web.client: DEBUG
+
 server:
   port: 9292
-
