--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
+	<!--	<dependency>
 		<groupId>org.springframework.ai</groupId>
 		<artifactId>spring-ai-starter-model-ollama</artifactId>
-	</dependency>
+	</dependency>-->
 		<dependency>
 			<groupId>org.springframework.ai</groupId>
 			<artifactId>spring-ai-starter-model-openai</artifactId>
