--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,13 +5,13 @@ spring:
   ai:
     openai:
       api-key: ${OPEN_API_KEY}
-    ollama:
-      base-url: http://localhost:11434
-      chat:
-        model: llama3
-    chat:
-      client:
-        enabled: false
+#    ollama:
+#      base-url: http://localhost:11434
+#      chat:
+#        model: llama32
+#    chat:
+#      client:
+#        enabled: false
 logging:
   level:
     org.springframework.ai.ollama: DEBUG
